--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,4 +1,5 @@
- .clearfix:after {
+html, body { scroll-behavior:smooth; }
+.clearfix:after {
   content: ".";
   display: block;
   height: 0;
@@ -16,4 +17,8 @@
  }
  .box-hd{
    height: 58px;
+ }
+ .box-hd .title{
+   font-size: 22px;
+   font-weight: 200;
  }
